{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 21,
  "lineage": "308ddebf-bcd7-cd4e-2321-5f3fce92c002",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bluegreendeploy_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973681297890:internet-gateway/igw-0787da7db4c6ef3e9",
            "id": "igw-0787da7db4c6ef3e9",
            "owner_id": "973681297890",
            "tags": {
              "Name": "bluegreendeploy-igw"
            },
            "tags_all": {
              "Name": "bluegreendeploy-igw"
            },
            "vpc_id": "vpc-05599cfa610fc79b7"
          },
          "dependencies": [
            "aws_vpc.bluegreendeploy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bluegreendeploy_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973681297890:route-table/rtb-09788df704492a666",
            "id": "rtb-09788df704492a666",
            "owner_id": "973681297890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0787da7db4c6ef3e9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bluegreendeploy-route-table"
            },
            "tags_all": {
              "Name": "bluegreendeploy-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05599cfa610fc79b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.bluegreendeploy_igw",
            "aws_vpc.bluegreendeploy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038cd36ca95ac9a59",
            "route_table_id": "rtb-09788df704492a666",
            "subnet_id": "subnet-0de43fc0dacf04ab8"
          },
          "dependencies": [
            "aws_internet_gateway.bluegreendeploy_igw",
            "aws_route_table.bluegreendeploy_route_table",
            "aws_subnet.bluegreendeploy_subnet",
            "aws_vpc.bluegreendeploy_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055f5e559020036ac",
            "route_table_id": "rtb-09788df704492a666",
            "subnet_id": "subnet-0d94dc846f70da906"
          },
          "dependencies": [
            "aws_internet_gateway.bluegreendeploy_igw",
            "aws_route_table.bluegreendeploy_route_table",
            "aws_subnet.bluegreendeploy_subnet",
            "aws_vpc.bluegreendeploy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bluegreendeploy_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973681297890:security-group/sg-0d0a810404c38e2e0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0a810404c38e2e0",
            "ingress": [],
            "name": "terraform-20241205135739698400000005",
            "name_prefix": "terraform-",
            "owner_id": "973681297890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bluegreendeploy-cluster-sg"
            },
            "tags_all": {
              "Name": "bluegreendeploy-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05599cfa610fc79b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bluegreendeploy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bluegreendeploy_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973681297890:security-group/sg-0ddacf41fac11f13e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddacf41fac11f13e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20241205135739701300000006",
            "name_prefix": "terraform-",
            "owner_id": "973681297890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bluegreendeploy-node-sg"
            },
            "tags_all": {
              "Name": "bluegreendeploy-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05599cfa610fc79b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bluegreendeploy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bluegreendeploy_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973681297890:subnet/subnet-0de43fc0dacf04ab8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de43fc0dacf04ab8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "973681297890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bluegreendeploy-subnet-0"
            },
            "tags_all": {
              "Name": "bluegreendeploy-subnet-0"
            },
            "vpc_id": "vpc-05599cfa610fc79b7"
          },
          "dependencies": [
            "aws_vpc.bluegreendeploy_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973681297890:subnet/subnet-0d94dc846f70da906",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d94dc846f70da906",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "973681297890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bluegreendeploy-subnet-1"
            },
            "tags_all": {
              "Name": "bluegreendeploy-subnet-1"
            },
            "vpc_id": "vpc-05599cfa610fc79b7"
          },
          "dependencies": [
            "aws_vpc.bluegreendeploy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bluegreendeploy_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973681297890:vpc/vpc-05599cfa610fc79b7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-015d236716871240d",
            "default_route_table_id": "rtb-0ceb24e680a54f7d3",
            "default_security_group_id": "sg-0417b5afe9f18e2cb",
            "dhcp_options_id": "dopt-220c6e58",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05599cfa610fc79b7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ceb24e680a54f7d3",
            "owner_id": "973681297890",
            "tags": {
              "Name": "bluegreendeploy-vpc"
            },
            "tags_all": {
              "Name": "bluegreendeploy-vpc"
            }
          }
        }
      ]
    }
  ]
}